--- a/apps/backend/views/setup/index.phtml
+++ b/apps/backend/views/setup/index.phtml
@@ -1,7 +1,7 @@
-<header clas="container">
+<header class="container">
     <div class="content">
         <h1 class="main_logo text-center">
-            <img width="20%" src="img/logo.png"/>
+            <img width="30%" src="<?= URL_PROJECT ?>img/logo.png"/>
         </h1>
     </div>
 </header>
@@ -17,6 +17,7 @@ $(document).ready(function(){
 <div class="container">
     <div class="content center-block">
         <article class=" content">
+            <h1 class="fontzero">Informações Iniciais</h1>
             <p class="text-justify">Bem vindo ao Pluton, antes de iniciar são necessárias 
                 informar alguns dados a respeito do banco de dados e criação da conta de administrador:</p>
             <ul>
