--- a/apps/backend/views/setup/userSettings.phtml
+++ b/apps/backend/views/setup/userSettings.phtml
@@ -10,7 +10,7 @@
     <div class="content">
         <article>
             <h3 class="text-center">Informe os dados do Usuário</h3>
-            <form class="form-horizontal" action="setup/userCreate" method="POST">
+            <form class="form-horizontal" action="userCreate" method="POST">
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Nome:</label>
                     <div class="col-sm-6">
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-5">
-                        <button type="button" class="btn btn-default" id="prosseguir" > Prosseguir</button>
+                        <button type="submit" class="btn btn-default" id="prosseguir" > Prosseguir</button>
                     </div>
                 </div>
             </form>
