--- a/apps/backend/views/index.phtml
+++ b/apps/backend/views/index.phtml
@@ -16,7 +16,7 @@
         <![endif]-->
     </head>
 
-    <body  class="bg-gray">
+    <body>
         <script src="<?= URL_PROJECT ?>js/jquery-2.1.3.min.js"></script>
         <script src="<?= URL_PROJECT ?>js/bootstrap.min.js"></script>
         
