--- a/apps/backend/views/login/index.phtml
+++ b/apps/backend/views/login/index.phtml
@@ -1,1 +1,21 @@
-<h1>Welcome to Login/Index!</h1>
+<header class="container">
+    <div class="content">
+        <h1 class="main_logo text-center">
+            <img width="30%" src="<?= URL_PROJECT ?>img/logo.png"/>
+        </h1>
+    </div>
+</header>
+
+
+<div class="container">
+    <div class="content border">
+            <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+                 alt="">
+            <form class="form-signin" action="" method="">
+                <input type="text" class="form-control" placeholder="Usuário" required autofocus>
+                <input type="password" class="form-control" placeholder="Senha" required>
+                <input type="submit" class="btn btn-lg btn-default btn-block" value="Entrar" />
+            </form>
+    </div>
+</div>
+</div>
