--- a/apps/backend/views/setup/databaseConfig.phtml
+++ b/apps/backend/views/setup/databaseConfig.phtml
@@ -11,7 +11,7 @@
     <div class="content modal-content">
         <article class="content">
             <h1 class="h3 text-center">Informações do Banco de Dados</h1>
-            <form class="form-horizontal center-block" id="user_create" name="user_create">
+            <form class="form-horizontal center-block" id="user_create" name="user_create" action="configFileCreate" method="post">
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Banco de Dados: </label>
                     <div class="col-sm-7">
@@ -27,13 +27,13 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Senha: </label>
                     <div class="col-sm-7">
-                        <input type="text" class="form-control" name="database_paswd" id="database_paswd" class="database_paswd">
+                        <input type="password" class="form-control" name="database_passwd" id="database_passwd" class="database_passwd">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Servidor: </label>
                     <div class="col-sm-7">
-                        <input type="text" class="form-control" name="database_server" id="database_server" class="database_server" value="localhost">
+                        <input type="text" class="form-control" name="database_host" id="database_host" class="database_host" value="localhost">
                     </div>
                 </div>
                 <div class="text-justify">
@@ -49,8 +49,3 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<script>
-    $("#prosseguir").click(function () {
-        window.location.href = 'setup/ConfigFileCreate';
-    });
-</script>
