--- a/apps/backend/views/setup/index.phtml
+++ b/apps/backend/views/setup/index.phtml
@@ -25,10 +25,10 @@
         <article class="content text-justify">
             <h1 class="hidden">Informações Adicionais</h1>
             <p>Esses dados serão utilizados para criar um arquivo de configuração na pasta <b>projeto/apps/config/</b> nomeado <b>config.ini</b>. Caso ocorra algum erro
-            na configuração via interface gráfica, este arquivo pode ser alterado manualmente. </p>
+            na configuração via interface gráfica, este arquivo pode ser criado manualmente. Para saber como criar o arquivo veja este <a><href="#">link</href></a>. </p>
             <div class="form-group">
                 <div class="col-sm-offset-5">
-                    <input type="submit" class="btn btn-lg btn-default" id="prosseguir" value="Prossseguir" />
+                    <input type="button" class="btn btn-lg btn-default" id="prosseguir" value="Prossseguir" />
                 </div>
             </div>
         </article>
