--- a/apps/backend/views/index.phtml
+++ b/apps/backend/views/index.phtml
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- Layout padrão para as views do backend -->
-<html lang="br">
+<html class="no-js" lang="br">
     <head>
         <meta charset="utf-8">
 
@@ -8,18 +8,22 @@
         <meta name="description" content="Pluton Configurações">
         <meta name="author" content="viniciusilveira">
         <link rel="shortcut icon" href="<?= URL_PROJECT ?>img/logo.png"/>
-        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/style.css">
-        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap.min.css">
+        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/style.css"/>
+        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/sweet-alert.css"/>
 
         <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     </head>
 
     <body>
         <script src="<?= URL_PROJECT ?>js/jquery-2.1.3.min.js"></script>
+        <script src="<?= URL_PROJECT ?>js/modernizr.js"></script>
         <script src="<?= URL_PROJECT ?>js/bootstrap.min.js"></script>
-        
+        <script src="<?= URL_PROJECT ?>js/sweet-alert.js"></script>
+        <script src="<?= URL_PROJECT ?>js/bootstrap-filestyle.min.js"> </script>
+
         <?= $this->getContent(); ?>
     </body>
 </html>
