--- a/apps/backend/views/setup/newUser.phtml
+++ b/apps/backend/views/setup/newUser.phtml
@@ -1,9 +1,58 @@
-<?php
+<header class="container">
+    <div class="content">
+        <h1 class="main_logo text-center">
+            <img width="30%" src="<?= URL_PROJECT ?>img/logo.png"/>
+        </h1>
+    </div>
+</header>
 
-/* 
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
 
-echo "huehue brbr";
+<div class="container container-fluidr center-block">
+    <div class="content modal-content">
+        <article class="content">
+            <h1 class="h3 text-center">Dados do Usuário</h1>
+            <form class="form-horizontal center-block" id="user_create" name="user_create" action="createSuperAdmin" method="post">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Nome: </label>
+                    <div class="col-sm-7">
+                        <input type="text" class="form-control" name="user_name" id="user_name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">E-mail: </label>
+                    <div class="col-sm-7">
+                        <input type="email" class="form-control" name="user_email" id="user_email" >
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Login: </label>
+                    <div class="col-sm-7">
+                        <input type="text" class="form-control" name="user_login" id="user_login">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Senha: </label>
+                    <div class="col-sm-7">
+                        <input type="password" class="form-control" name="user_passwd" id="user_passwd">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Imagem de Perfil: </label>
+                    <div class="col-sm-7">
+                        <input type="file" class="filestyle" name="user_img" id="user_img" data-buttonName="btn-primary">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-5">
+                        <input type="submit" class="btn btn-lg btn-default" id="prosseguir" value="Prossseguir" />
+                    </div>
+                </div>
+            </form>
+        </article>
+    </div>
+    <div class="clearfix"></div>
+</div>
+
+<script>
+
+</script>
