--- a/apps/backend/views/login/index.phtml
+++ b/apps/backend/views/login/index.phtml
@@ -22,7 +22,7 @@ $("#login").on("click", function(){
 
 function efetuarLogin(user, passwd){
     $.ajax({
-        url: '',
+        url: 'settings/login',
         data: '',
         type: 'POST',
         dataType: 'json',
