--- a/apps/backend/views/login/index.phtml
+++ b/apps/backend/views/login/index.phtml
@@ -5,13 +5,40 @@
         </h1>
     </div>
 </header>
-<div class="container">
-    <div class="content border">
-        <form class="form-signin" action="" method="">
-            <input type="text" class="form-control" placeholder="Usuário" required autofocus>
-            <input type="password" class="form-control" placeholder="Senha" required>
-            <input type="button" id="login" class="btn btn-lg btn-default btn-block" value="Entrar" />
+<div class="container container-fluidr center-block">
+    <div class="content-login modal-content center-block">
+        <form name="login" id="login" class="form-horizontal " enctype="multipart/form-data" method="POST">
+            <div class="form-group">
+                <div class="input-group col-sm-6 input-login">
+                    <span class="input-group-addon "><i class="glyphicon glyphicon-user"></i></span>
+                    <input id="user" type="text" class="form-control" name="user_name" id="user_name" value="" placeholder="Login ou e-mail">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group col-sm-6 input-login">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input id="password" type="password" class="form-control" name="user_passwd" id="user_passwd" placeholder="Senha">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-5">
+                    <input type="button" class="container-fluid btn btn-lg btn-default" id="prosseguir" value="Entrar" />
+                </div>
+            </div>
         </form>
     </div>
+    <div class="clearfix"></div>
 </div>
+<script>
+    $("#prosseguir").click(function(){
+        $.ajax({
+            url: 'login/login',
+            data: $("#login").serialize(),
+            //dataType: 'json',
+            type: 'POST',
+            success: function(data){
 
+            }
+        })
+    });
+</script>
