--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
 
 .container{float: center; width: 100%;}
 .content{width: 70%; margin: 0 15% 0; padding: 10px 0;}
+.content-login{width: 45%; margin: 0 15% 0; padding: 10px 0;}
 
 .bg-gray{background-color: #444444; color: #fff;}
 .bg-light{background-color: #E6E4D9; color: #444;}
@@ -21,43 +22,6 @@
 
 /************** End Common **************************/
 
-/*************** Login Style ********************/
-.form-signin{
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
+.input-login{
+    margin: auto;
 }
-.form-signin .form-control{
-    position: relative;
-    font-size: 16px;
-    height: auto;
-    padding: 10px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.form-signin .form-control:focus{
-    z-index: 2;
-}
-.form-signin input[type="text"]{
-    margin-bottom: -1px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-}
-.form-signin input[type="password"]{
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
-.profile-img{
-    width: 114px;
-    height: 114px;
-    margin: 0 auto 10px;
-    display: block;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-}
-
-/*************** End Login Style ********************/
