--- a/apps/backend/views/login/index.phtml
+++ b/apps/backend/views/login/index.phtml
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <div class="input-group col-sm-6 input-login">
                     <span class="input-group-addon "><i class="glyphicon glyphicon-user"></i></span>
-                    <input id="user" type="text" class="form-control" name="user_name" id="user_name" value="" placeholder="Login ou e-mail">
+                    <input id="user" type="text" class="form-control" name="user_login" id="user_login" value="" placeholder="Login ou e-mail">
                 </div>
             </div>
             <div class="form-group">
@@ -30,18 +30,49 @@
     <div class="clearfix"></div>
 </div>
 <script>
-    /**
-     * @todo: tratar o resultado retornado por login para alertar em caso de erro ou redirecionar para tela inicial em caso de sucesso;
-     */
+    
     $("#prosseguir").click(function(){
-        $.ajax({
-            url: 'login/login',
-            data: $("#login").serialize(),
-            dataType: 'json',
-            type: 'POST',
-            success: function(data){
-                alert(data);
+        //monta um array para verificação dos dados
+        var array_form = $("#login").serializeArray();
+        //cria um texto json para envio dos dados para a action de configuração do banco de dados;
+        var text_form = $("#login").serialize();
+        var validate = true;
+        //Verifica se há campos vazios no formulário
+        $.each(array_form, function(i, field){
+            if(field.value == ''){
+                swal({
+                    title: "Erro!",
+                    text: "Login ou senha invalidos!",
+                    type: "error",
+                    confirmButtonText: "OK"
+                });
+                validate = false;
             }
-        })
+        });
+
+        //Caso o formulário esteja completamente preenchido executa a chamada ajax
+        if(validate){
+            $.ajax({
+                url: $.verifySettingsURL(window.location.href, 'login', 'login'),
+                data: text_form,
+                type: 'POST',
+                dataType: 'json',
+                success: function(data){
+                    //Caso o login tenha sido efetuado, redireciona pra página inicial.
+                    //Se ocorreu alguma falha exibe um alert.
+                    if(data.success){
+                        window.location.href = "<?= URL_PROJECT ?>settings/index";
+                    }else{
+                        swal({
+                            title: "Erro!",
+                            text: "Login ou senha invalidos!",
+                            type: "error",
+                            confirmButtonText: "OK"
+                        });
+                    }
+                }
+            });
+        }
+        
     });
 </script>
