--- a/apps/backend/views/setup/databaseConfig.phtml
+++ b/apps/backend/views/setup/databaseConfig.phtml
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <label class="col-sm-4 control-label">Senha: </label>
                 <div class="col-sm-7">
-                    <input type="password" class="form-control" name="database_passwd" id="database_passwd" class="database_passwd">
+                    <input type="text" class="form-control" name="database_passwd" id="database_passwd" class="database_passwd">
                 </div>
             </div>
             <div class="form-group">
@@ -67,7 +67,7 @@
         });
         if(validate){
             $.ajax({
-            url: 'databaseSettings',
+            url: $.verifySettingsURL(window.location.href, 'setup', 'databaseSettings'),
             data: text_form,
             type: 'POST',
             dataType: 'json',
