--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,10 @@
     border-radius: 5px;
 }
 
+.glyphicon-large{
+    font-size: 60px;
+}
+
 /******************** Forms **************************/
 
 .input-login{
@@ -28,7 +32,11 @@
 
 /******************** Layouts ************************/
 
-.border-lateral{
-	width: 50%;
-	background-color: black;
+.list-group.panel > .list-group-item {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px
 }
+.list-group-submenu {
+  margin-left:20px;
+}
+.strong { font-weight: bold; }
