#4 - Finalizado Layout da tela inicial

--- a/apps/backend/views/index.phtml
+++ b/apps/backend/views/index.phtml
@@ -26,6 +26,7 @@
         <script src="<?= URL_PROJECT ?>js/bootstrap.min.js"></script>
         <script src="<?= URL_PROJECT ?>js/sweet-alert.js"></script>
         <script src="<?= URL_PROJECT ?>js/bootstrap-filestyle.min.js"> </script>
+        <script src="<?= URL_PROJECT ?>js/chart.min.js"> </script>
         <script src="<?= URL_PROJECT ?>js/custom.js"> </script>
 
         <?= $this->getContent(); ?>
